<resources>
    <string name="app_name">ChatUCAM</string>
    <string name="nombre_desarrollador">Jorge Martinez</string>

    <string name="Btn_ir_registros">Registrarme</string>
    <string name="Btn_ir_logueo">Ingresar</string>

    <string name="Et_nombre_usuario">Nombre de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Et_r_password">Repetir password</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="menu_salir">Cerrar Sesión</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_perfil">Mi perfil</string>

    <string name="Et_email_login">Email</string>
    <string name="Et_password_login">Contraseña</string>
    <string name="Btn_login">Ingresar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Nombre_usuario">Nombre de usuario</string>
    <string name="Item_nombre_usuario">Nombre usuario</string>
    <string name="Item_email_usuario">Email usuario</string>

    <string name="Et_buscar_usuario">Buscar usuario</string>

    <!-- Perfil usuario -->
    <string name="P_n_usuario">Nombre usuario</string>
    <string name="P_email">email</string>
    <string name="P_nombres">Nombre</string>
    <string name="P_apellidos">Apellidos</string>
    <string name="P_profesion">Profesion</string>
    <string name="P_domicilio">Domicilio</string>
    <string name="P_edad">Edad</string>
    <string name="P_telefono">Telefono</string>
    <string name="P_proveedor">Proveedor</string>
    <string name="Btn_Guardar">Guardar</string>
    <string name="N_usuario_chat">Usuario chat</string>
    <string name="Et_mensaje">Mensaje</string>

    <!--<string name="Btn_cerrar_sesion">Cerrar Sesión</string>-->
</resources>